# qdrant-recommendations

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: hugging_face.rs  lib.rs  main.rs  storage.rs
client/tests/: test_storage.rs  test_storagfe.rs
daemon/: Cargo.toml
daemon/src/: daemon.rs  lib.rs
embedding/: Cargo.toml
embedding/src/: hugging_face.rs  lib.rs  self_hosted.rs
src/: daemon.rs  main.rs  providers.rs
storage_client/: Cargo.toml
storage_client/src/: hugging_face.rs  idea.rs  lib.rs  storage.rs
