[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
eyre = "0.6.12"
qdrant-client = "1.15.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.14.1"
