[package]
name = "storage_client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
eyre = "0.6.12"
qdrant-client = "1.15.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
embedding = { path = "../embedding" }

[dev-dependencies]
mockall = "0.12"
async-trait = "0.1"
uuid = { version = "1.18.0", features = ["v4"] }
serde_json = "1.0.143"
